<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FirstApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_testIntent">testIntent</string>
    <string name="button_testNavi">testNavi</string>
    <string name="button_testResultActivity">testResultActivity</string>
    <string name="title_activity_display_message">DisplayMessage</string>

</resources>
