<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="testListView"
        android:text="@string/button_testNavi" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edit_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edit_message" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/edit_message"
            android:onClick="sendMessage"
            android:text="@string/button_send" />
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="testIntent"
        android:text="@string/button_testIntent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="testResultActivity"
        android:text="@string/button_testResultActivity" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="testNavi"
        android:text="@string/button_testNavi" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="testToast"
        android:text="toast" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="TestDownload"
        android:text="Download" />

    <Button
        android:id="@+id/btnPM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="TestPM"
        android:text="TestPM" />
  <!--  
         <ProgressBar
            android:id="@+id/splash_loading"
            android:layout_width="54.0dip"
            android:layout_height="12.0dip"
            android:indeterminateOnly="true" />
-->  
</LinearLayout>